--- a/Seite/index.html
+++ b/Seite/index.html
@@ -53,7 +53,7 @@
 
     <main>
         <div id="heroshot">
-            <img src="Bilder/heroshot3.png" alt="Heroshot">
+            <div id="hero-img"><img src="Bilder/heroshot3.png" alt="Heroshot"></div>
             <div class="introduction">
                 <div class="white-topper"></div>
                 <p id="title">FENDI CAFFÈ</p>
