Update mobile version

--- a/Seite/index.html
+++ b/Seite/index.html
@@ -123,9 +123,9 @@
             <img class="slide" src="Bilder/beans_spoon.png" alt="coffe beans on spoon">
             <img class="slide" src="Bilder/package.png" alt="coffe beans on spoon">
             <div class="story-bar">
-                <p onclick="currentDiv(1)">I</p>
-                <p onclick="currentDiv(2)">II</p>
-                <p onclick="currentDiv(3)">III</p>
+                <p id="p1" onclick="currentDiv(1)">I</p>
+                <p id="p2" onclick="currentDiv(2)">II</p>
+                <p id="p3" onclick="currentDiv(3)">III</p>
             </div>
             <div class="text-behind-the-beans">
                 <h1 id="roesterei">RÖSTEREI</h1>
