--- a/Seite/index.html
+++ b/Seite/index.html
@@ -123,16 +123,25 @@
             <img class="slide" src="Bilder/beans_spoon.png" alt="coffe beans on spoon">
             <img class="slide" src="Bilder/package.png" alt="coffe beans on spoon">
             <div class="story-bar">
-                <p id="p1" onclick="currentDiv(1)">I</p>
-                <p id="p2" onclick="currentDiv(2)">II</p>
-                <p id="p3" onclick="currentDiv(3)">III</p>
+                <p class="dot" onclick="currentDiv(1)">I</p>
+                <p class="dot" onclick="currentDiv(2)">II</p>
+                <p class="dot" onclick="currentDiv(3)">III</p>
+            </div>
+            <div class="text-behind-the-beans">
+                <h1 id="herkunft">HERKUNFT</h1>
+                <p>Der Charakter und das Potenzial stecken bereits in der Bohne. Unsere Partner und
+                    Erntehelfer im Südwesten Äthiopiens geben täglich ihr Bestes die Kaffeekirschen unter
+                    einem hohen Qualitätsstandard aufzubereiten.</p>
             </div>
             <div class="text-behind-the-beans">
                 <h1 id="roesterei">RÖSTEREI</h1>
-                <p>Fendi Caffè wird aus sehr dunklen Bohnen geröstet, deren Zubereitung einer speziellen Kunst unserer
-                    Röstmeister bedarf. Die Bohnen werden in unserer hauseigenen Rösterei, der sogenannten „torrefazione
-                    artigianale“
-                    frisch für Sie zubereitet.</p>
+                <p>Unsere erfahrenen Röstmeister verleihen den Bohnen den letzten aromatischen Feinschliff,
+                    sodass der Charakter unverfälscht in der Tasse zur Geltung kommt.</p>
+            </div>
+            <div class="text-behind-the-beans">
+                <h1 id="verpackung">VERPACKUNG</h1>
+                <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in einer speziell
+                    angefertigten Verpackung mit Fendi-Design eingepackt. </p>
             </div>
         </div>
         <div class="services">
