--- a/Seite/index.html
+++ b/Seite/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
         <div id="navigation-desktop">
             <div class="bar"></div>
             <div class="menu">
-                <img src="Bilder/fendi_logo_white.png" alt="Fendi Caffè Logo"></a>
+                <img src="Bilder/fendi_logo_white.png" alt="Fendi Caffè Logo">
                 <a href="#sprungmarke1"> FENDI CAFFÈ</a>
                 <a href="#sprungmarke2"> FENDI CAFFÈ LOUNGE</a>
                 <a href="#sprungmarke3"> BEHIND THE BEANS</a>
@@ -86,18 +86,19 @@
                     Ein Klassiker für die typische Caffè Crema.</p>
             </div>
 
-            <div class="product-overlay2">
+            <div class="product-overlay">
                 <h1>FENDI CAFFÈ</h1>
                 <h2>TRADITION UND HANDWERKSKUNST</h2>
                 <p>Fendi Caffè wird aus sehr dunklen Bohnen geröstet, deren Zubereitung einer speziellen Zubereitungsart
-                    unserer Röstmeister bedarf. Die Bohnen werden in unserer hauseigenen Rösterei, der sogenannten „torrefazione artigianale“
+                    unserer Röstmeister bedarf. Die Bohnen werden in unserer hauseigenen Rösterei, der sogenannten
+                    „torrefazione artigianale“
                     frisch für Sie zubereitet.</p>
             </div>
-            
+
         </div>
         <div class="img-wrapper-lounge">
-            <img class="mySlides2" src="Bilder/fendi_lounge2.png" alt="Fendi Caffè Lounge">
-            <img class="mySlides2" src="Bilder/fendi_lounge.png" alt="Fendi Caffè Lounge">
+            <img class="mySlides2" src="Bilder/fendi_lounge2.jpg" alt="Fendi Caffè Lounge">
+            <img class="mySlides2" src="Bilder/fendi_lounge.jpg" alt="Fendi Caffè Lounge">
         </div>
         <div class="lounge-slide">
             <img src="Bilder/arrow_back.png" onclick="plusDivs2(-1)" id="arrow-back-1" alt="arrow-back">
@@ -140,7 +141,8 @@
             </div>
             <div class="text-behind-the-beans">
                 <h1 id="verpackung">VERPACKUNG</h1>
-                <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in einer speziell
+                <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in einer
+                    speziell
                     angefertigten Verpackung mit Fendi-Design eingepackt. </p>
             </div>
         </div>
@@ -178,18 +180,19 @@
             </div>
         </div>
         <div class="call-to-action">
-            <img src="Bilder/product.png" alt="Fendi Caffè">
-            <div class="call-to-action-text">
-                <p>Kommen Sie mit auf eine Reise durch die ewige Stadt.</p>
-                <h2>€180,00</h2>
-                <p id="weight">200g</p>
-                <div class="call-to-action-button-buy">
-                    <h1>JETZT KAUFEN</h1>
+                <img src="Bilder/product.png" loading="lazy" alt="Fendi Caffè">
+                <div class="call-to-action-text">
+                    <p>Kommen Sie mit auf eine Reise durch die ewige Stadt.</p>
+                    <h2>€180,00</h2>
+                    <p id="weight">200g</p>
+                    <div class="call-to-action-button-buy">
+                        <h1>JETZT KAUFEN</h1>
+                    </div>
+                    <div class="call-to-action-button-reservation">
+                        <h1>IN FENDI CAFFÈ LOUNGE PROBIEREN</h1>
+                    </div>
                 </div>
-                <div class="call-to-action-button-reservation">
-                    <h1>IN FENDI CAFFÈ LOUNGE PROBIEREN</h1>
-                </div>
-            </div>
+        </div>
         </div>
     </main>
     <footer>
