--- a/Seite/index.html
+++ b/Seite/index.html
@@ -59,7 +59,7 @@
                 <p id="title">FENDI CAFFÈ</p>
                 <p id="subtitle">Der Geschmack der ewigen Stadt</p>
                 <p>Erleben Sie bei einer Tasse Fendi Caffè mit allen Sinnen für welche Werte wir seit 1925 stehen:
-                    Qualität, Kreativität & Handwerkskunst. <br>
+                    Qualität, Tradition & Handwerkskunst. <br>
                     Nur für Sie haben wir die hochwertigsten Kaffeebohnen und die besten Röstereien Italiens aufgesucht.
                     <br>
                     Ob zuhause oder in unserer Boutique an einem sonnigen Platz: <br> Genießen Sie Ihren Fendi Caffè in
