--- a/Seite/index.html
+++ b/Seite/index.html
@@ -80,8 +80,7 @@
                 <div id="sprungmarke1" class="sprung1"></div>
                 <h1>FENDI CAFFÈ</h1>
                 <h2>QUALITÄT</h2>
-                <p>Nur für Sie haben wir die hochwertigsten Kaffeebohnen und die besten Röstereien Italiens aufgesucht.
-                    Das Aroma der gerösteten Arabica-Bohnen verfügt über eine fruchtig, süße Note, welche balanciert im
+                <p>Das Aroma unserer hochwertigen Arabica-Bohnen verfügt nach der Röstung über eine fruchtig, süße Note, welche balanciert im
                     Geschmack ist und nur wenig Säure besitzt. <br>
                     Ein Klassiker für die typische Caffè Crema.</p>
             </div>
@@ -108,7 +107,7 @@
                 <div id="sprungmarke2" class="sprung2"></div>
                 <h1>FENDI CAFFÈ LOUNGE</h1>
                 <p>Besuchen Sie unsere Caffè Lounge in Rom, welche mit ihrer unverkennbaren Eleganz zum Verweilen
-                    einlädt. Hier können Sie Ihre Geschmacksknospen bei einer Tasse Fendi Caffè und Häppchen
+                    einlädt. Hier können Sie Ihre Geschmacksknospen bei einer Tasse Fendi Caffè und italienischer Feinkost
                     verwöhnen lassen.</p>
                 <div id="lounge-reservation">
                     <h1>JETZT RESERVIEREN</h1>
@@ -130,9 +129,8 @@
             </div>
             <div class="text-behind-the-beans">
                 <h1 id="herkunft">HERKUNFT</h1>
-                <p>Der Charakter und das Potenzial stecken bereits in der Bohne. Unsere Partner und
-                    Erntehelfer im Südwesten Äthiopiens geben täglich ihr Bestes die Kaffeekirschen unter
-                    einem hohen Qualitätsstandard aufzubereiten.</p>
+                <p>Der Charakter und das Potenzial stecken bereits in der Bohne. Unsere Partner im Südwesten Äthiopiens geben täglich ihr Bestes die Kaffeebohnen unter
+                    einem hohen Qualitätsstandard aufzubereiten, damit diese während der Röstung ihr volles Aroma entfalten können.</p>
             </div>
             <div class="text-behind-the-beans">
                 <h1 id="roesterei">RÖSTEREI</h1>
@@ -142,8 +140,7 @@
             <div class="text-behind-the-beans">
                 <h1 id="verpackung">VERPACKUNG</h1>
                 <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in einer
-                    speziell
-                    angefertigten Verpackung mit Fendi-Design eingepackt. </p>
+                    speziell angefertigten Fendi-Verpackung eingepackt. </p>
             </div>
         </div>
         <div class="services">
