--- a/Seite/index.html
+++ b/Seite/index.html
@@ -172,7 +172,7 @@
             <h2>FENDI CAFFÈ</h2>
             <div class="testimonial-text">
                 <img src="Bilder/testimonial_bella_hadid2.jpg" alt="Bella Hadid for Fendi">
-                <p>"If anyone would ask me how Rome tastes like, I would simply tell them: <br>
+                <p>"If anyone would ask me how Rome tastes like, I would tell them: <br>
                     Like a cup of freshly roasted Fendi Caffè."</p>
             </div>
         </div>
