--- a/Seite/index.html
+++ b/Seite/index.html
@@ -58,91 +58,82 @@
                 <div class="white-topper"></div>
                 <p id="title">FENDI CAFFÈ</p>
                 <p id="subtitle">Der Geschmack der ewigen Stadt</p>
-                <p>Erleben Sie bei einer Tasse Fendi Caffè mit allen Sinnen für welche Werte wir seit 1925 stehen:
-                    Qualität, Tradition & Handwerkskunst. <br>
-                    Nur für Sie haben wir die hochwertigsten Kaffeebohnen und die besten Röstereien Italiens aufgesucht.
-                    <br>
-                    Ob zuhause oder in unserer Boutique an einem sonnigen Platz: <br> Genießen Sie Ihren Fendi Caffè in
-                    höchster Vollendung.
+                <p>Erleben Sie bei einer Tasse Fendi Caffè mit allen Sinnen für welche Werte wir seit 1925 stehen: Qualität, Tradition & Handwerkskunst. <br> Nur für Sie haben wir die hochwertigsten Kaffeebohnen und die besten Röstereien Italiens aufgesucht.
+                    <br> Ob zuhause oder in unserer Boutique an einem sonnigen Platz: <br> Genießen Sie Ihren Fendi Caffè in höchster Vollendung.
                 </p>
             </div>
         </div>
-        <div class="img-wrapper-product">
-            <img class="mySlides" src="Bilder/coffee_product5.png" alt="coffee beans">
-            <img class="mySlides" id="product" src="Bilder/product4.png" alt="coffee cup">
-        </div>
-        <div class="product-slide">
-            <img src="Bilder/arrow_back.png" onclick="plusDivs(-1)" id="arrow-back-1" alt="arrow-back">
-            <img src="Bilder/slash.png" id="slash-1" alt="slash">
-            <img src="Bilder/arrow_forth.png" onclick="plusDivs(+1)" id="arrow-forth-1" alt="arrow forth">
+        <div class="div1">
+            <div class="img-wrapper-product">
+                <img class="mySlides" src="Bilder/coffee_product5.png" alt="coffee beans">
+                <img class="mySlides" id="product" src="Bilder/product4.png" alt="coffee cup">
+            </div>
+            <div class="product-slide">
+                <img src="Bilder/arrow_back.png" onclick="plusDivs(-1)" id="arrow-back-1" alt="arrow-back">
+                <img src="Bilder/slash.png" id="slash-1" alt="slash">
+                <img src="Bilder/arrow_forth.png" onclick="plusDivs(+1)" id="arrow-forth-1" alt="arrow forth">
 
-            <div class="product-overlay">
-                <div id="sprungmarke1" class="sprung1"></div>
-                <h1>FENDI CAFFÈ</h1>
-                <h2>QUALITÄT</h2>
-                <p>Das Aroma unserer hochwertigen Arabica-Bohnen verfügt nach der Röstung über eine fruchtig, süße Note, welche balanciert im
-                    Geschmack ist und nur wenig Säure besitzt. <br>
-                    Ein Klassiker für die typische Caffè Crema.</p>
+                <div class="product-overlay">
+                    <div id="sprungmarke1" class="sprung1"></div>
+                    <h1>FENDI CAFFÈ</h1>
+                    <h2>QUALITÄT</h2>
+                    <p>Das Aroma unserer hochwertigen Arabica-Bohnen verfügt nach der Röstung über eine fruchtig, süße Note, welche balanciert im Geschmack ist und nur wenig Säure besitzt. <br> Ein Klassiker für die typische Caffè Crema.</p>
+                </div>
+
+                <div class="product-overlay">
+                    <h1>FENDI CAFFÈ</h1>
+                    <h2>TRADITION UND HANDWERKSKUNST</h2>
+                    <p>Fendi Caffè wird aus sehr dunklen Bohnen geröstet, deren Zubereitung einer speziellen Zubereitungsart unserer Röstmeister bedarf. Die Bohnen werden in unserer hauseigenen Rösterei, der sogenannten „torrefazione artigianale“ frisch
+                        für Sie zubereitet.</p>
+                </div>
             </div>
 
-            <div class="product-overlay">
-                <h1>FENDI CAFFÈ</h1>
-                <h2>TRADITION UND HANDWERKSKUNST</h2>
-                <p>Fendi Caffè wird aus sehr dunklen Bohnen geröstet, deren Zubereitung einer speziellen Zubereitungsart
-                    unserer Röstmeister bedarf. Die Bohnen werden in unserer hauseigenen Rösterei, der sogenannten
-                    „torrefazione artigianale“
-                    frisch für Sie zubereitet.</p>
+        </div>
+        <div class="div2">
+            <div class="img-wrapper-lounge">
+                <img class="mySlides2" src="Bilder/fendi_lounge2.jpg" alt="Fendi Caffè Lounge">
+                <img class="mySlides2" src="Bilder/fendi_lounge.jpg" alt="Fendi Caffè Lounge">
             </div>
-
-        </div>
-        <div class="img-wrapper-lounge">
-            <img class="mySlides2" src="Bilder/fendi_lounge2.jpg" alt="Fendi Caffè Lounge">
-            <img class="mySlides2" src="Bilder/fendi_lounge.jpg" alt="Fendi Caffè Lounge">
-        </div>
-        <div class="lounge-slide">
-            <img src="Bilder/arrow_back.png" onclick="plusDivs2(-1)" id="arrow-back-1" alt="arrow-back">
-            <img src="Bilder/slash.png" id="slash-1" alt="slash">
-            <img src="Bilder/arrow_forth.png" onclick="plusDivs2(+1)" id="arrow-forth-1" alt="arrow forth">
-            <div class="lounge-overlay">
-                <div id="sprungmarke2" class="sprung2"></div>
-                <h1>FENDI CAFFÈ LOUNGE</h1>
-                <p>Besuchen Sie unsere Caffè Lounge in Rom, welche mit ihrer unverkennbaren Eleganz zum Verweilen
-                    einlädt. Hier können Sie Ihre Geschmacksknospen bei einer Tasse Fendi Caffè und italienischer Feinkost
-                    verwöhnen lassen.</p>
-                <div id="lounge-reservation">
-                    <h1>JETZT RESERVIEREN</h1>
+            <div class="lounge-slide">
+                <img src="Bilder/arrow_back.png" onclick="plusDivs2(-1)" id="arrow-back-1" alt="arrow-back">
+                <img src="Bilder/slash.png" id="slash-1" alt="slash">
+                <img src="Bilder/arrow_forth.png" onclick="plusDivs2(+1)" id="arrow-forth-1" alt="arrow forth">
+                <div class="lounge-overlay">
+                    <div id="sprungmarke2" class="sprung2"></div>
+                    <h1>FENDI CAFFÈ LOUNGE</h1>
+                    <p>Besuchen Sie unsere Caffè Lounge in Rom, welche mit ihrer unverkennbaren Eleganz zum Verweilen einlädt. Hier können Sie Ihre Geschmacksknospen bei einer Tasse Fendi Caffè und italienischer Feinkost verwöhnen lassen.</p>
+                    <div id="lounge-reservation">
+                        <h1>JETZT RESERVIEREN</h1>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="margin-top"></div>
-        <div class="behind-the-beans">
-            <div id="sprungmarke3" class="sprung3"></div>
-            <h1>BEHIND THE</h1>
-            <h2>BEANS</h2>
-            <img class="slide" src="Bilder/IMG_0476.png" alt="coffe beans on spoon">
-            <img class="slide" src="Bilder/beans_spoon.png" alt="coffe beans on spoon">
-            <img class="slide" src="Bilder/package.png" alt="coffe beans on spoon">
-            <div class="story-bar">
-                <p class="dot" onclick="currentDiv(1)">I</p>
-                <p class="dot" onclick="currentDiv(2)">II</p>
-                <p class="dot" onclick="currentDiv(3)">III</p>
+            <div class="behind-the-beans">
+                <div id="sprungmarke3" class="sprung3"></div>
+                <h1>BEHIND THE</h1>
+                <h2>BEANS</h2>
+                <img class="slide" src="Bilder/IMG_0476.png" alt="coffe beans on spoon">
+                <img class="slide" src="Bilder/beans_spoon.png" alt="coffe beans on spoon">
+                <img class="slide" src="Bilder/package.png" alt="coffe beans on spoon">
+                <div class="story-bar">
+                    <p class="dot active" onclick="currentDiv(1)">I</p>
+                    <p class="dot active" onclick="currentDiv(2)">II</p>
+                    <p class="dot active" onclick="currentDiv(3)">III</p>
+                </div>
+                <div class="text-behind-the-beans">
+                    <h1 id="herkunft">HERKUNFT</h1>
+                    <p>Der Charakter und das Potenzial stecken bereits in der Bohne. Unsere Partner im Südwesten Äthiopiens geben täglich ihr Bestes die Kaffeebohnen unter einem hohen Qualitätsstandard aufzubereiten, damit diese während der Röstung ihr volles
+                        Aroma entfalten können.</p>
+                </div>
+                <div class="text-behind-the-beans">
+                    <h1 id="roesterei">RÖSTEREI</h1>
+                    <p>Unsere erfahrenen Röstmeister verleihen den Bohnen den letzten aromatischen Feinschliff, sodass der Charakter unverfälscht in der Tasse zur Geltung kommt.</p>
+                </div>
+                <div class="text-behind-the-beans">
+                    <h1 id="verpackung">VERPACKUNG</h1>
+                    <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in einer speziell angefertigten Fendi-Verpackung eingepackt. </p>
+                </div>
             </div>
-            <div class="text-behind-the-beans">
-                <h1 id="herkunft">HERKUNFT</h1>
-                <p>Der Charakter und das Potenzial stecken bereits in der Bohne. Unsere Partner im Südwesten Äthiopiens geben täglich ihr Bestes die Kaffeebohnen unter
-                    einem hohen Qualitätsstandard aufzubereiten, damit diese während der Röstung ihr volles Aroma entfalten können.</p>
-            </div>
-            <div class="text-behind-the-beans">
-                <h1 id="roesterei">RÖSTEREI</h1>
-                <p>Unsere erfahrenen Röstmeister verleihen den Bohnen den letzten aromatischen Feinschliff,
-                    sodass der Charakter unverfälscht in der Tasse zur Geltung kommt.</p>
-            </div>
-            <div class="text-behind-the-beans">
-                <h1 id="verpackung">VERPACKUNG</h1>
-                <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in einer
-                    speziell angefertigten Fendi-Verpackung eingepackt. </p>
-            </div>
-        </div>
         <div class="services">
             <h1 id="serviceleistungen">PREMIUM-SERVICELEISTUNGEN</h1>
             <div class="send-back-service">
@@ -154,15 +145,14 @@
             <div class="pick-up-service">
                 <img src="Bilder/icon_geschaeft.png" alt="pick up service">
                 <p>ABHOLUNG IM FENDI CASA</p>
-                <p>Bestellen Sie Fendi Caffè online und holen Sie Ihre Packung Fendi Caffè in unserer Boutique in Rom
-                    ab.</p>
+                <p>Bestellen Sie Fendi Caffè online und holen Sie Ihre Bestellung in unserer Fendi Boutique in Rom ab.
+                </p>
                 <p id="link2">Mehr erfahren</p>
             </div>
             <div class="package-service">
                 <img src="Bilder/icon_verpackung.png" alt="package service">
                 <p>FENDI VERPACKUNG</p>
-                <p>Exklusive Fendi Verpackung.
-                    Individualisieren Sie den Caffè mit einer persönlichen Nachricht als Geschenk.
+                <p>Exklusive Fendi Verpackung. Individualisieren Sie den Caffè mit einer persönlichen Nachricht als Geschenk.
                 </p>
                 <p id="link3">Mehr erfahren</p>
             </div>
@@ -172,24 +162,22 @@
             <h2>FENDI CAFFÈ</h2>
             <div class="testimonial-text">
                 <img src="Bilder/testimonial_bella_hadid2.jpg" alt="Bella Hadid for Fendi">
-                <p>"If anyone would ask me how Rome tastes like, I would tell them: <br>
-                    Like a cup of freshly roasted Fendi Caffè."</p>
+                <p>"If anyone would ask me how Rome tastes like, I would tell them: <br> Like a cup of freshly roasted Fendi Caffè."</p>
             </div>
         </div>
         <div class="call-to-action">
-                <img src="Bilder/product.png" loading="lazy" alt="Fendi Caffè">
-                <div class="call-to-action-text">
-                    <p>Kommen Sie mit auf eine Reise durch die ewige Stadt.</p>
-                    <h2>€180,00</h2>
-                    <p id="weight">200g</p>
-                    <div class="call-to-action-button-buy">
-                        <h1>JETZT KAUFEN</h1>
-                    </div>
-                    <div class="call-to-action-button-reservation">
-                        <h1>IN FENDI CAFFÈ LOUNGE PROBIEREN</h1>
-                    </div>
+            <img src="Bilder/product.png" loading="lazy" alt="Fendi Caffè">
+            <div class="call-to-action-text">
+                <p>Kommen Sie mit auf eine Reise durch die ewige Stadt.</p>
+                <h2>€180,00</h2>
+                <p id="weight">200g</p>
+                <div class="call-to-action-button-buy">
+                    <h1>JETZT KAUFEN</h1>
                 </div>
-        </div>
+                <div class="call-to-action-button-reservation">
+                    <h1>IN FENDI CAFFÈ LOUNGE PROBIEREN</h1>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
