--- a/Seite/index.html
+++ b/Seite/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="text-behind-the-beans">
                     <h1 id="verpackung">VERPACKUNG</h1>
-                    <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in einer speziell angefertigten Fendi-Verpackung eingepackt. </p>
+                    <p>Um die Qualität unserer Bohnen aufrechtzuerhalten, werden diese direkt nach der Röstung in eine speziell angefertigte Fendi-Verpackung eingepackt. </p>
                 </div>
             </div>
         <div class="services">
